2007-04-27  Anders Carlsson  <andersca@apple.com>

        Reviewed by Mitz.

        <rdar://problem/5165755>
        View Source is broken; empty window is shown
        
        Return YES for applewebdata URLs.
        
        * WebView/WebView.mm:
        (+[WebView _canHandleRequest:]):

2007-04-26  Oliver Hunt  <oliver@apple.com>

        Reviewed by Adam.

        Fix <rdar://problem/5061252> REGRESSION: In Gmail, image fails 
        to be inserted into message field after dragging

        Don't try to create <img> tags for local image files as it results
        in the potential to submit forms that look like they have an image,
        when in reality they don't.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _documentFragmentWithPaths:]):

2007-04-26  Anders Carlsson  <andersca@apple.com>

        Reviewed by Maciej.

        <rdar://problem/5049099> documents no longer have a default base URL
        
        If the base URL is nil, then create a unique applewebdata URL to match what Tiger WebKit does.
        
        * WebView/WebFrame.mm:
        (createUniqueWebDataURL):
        (-[WebFrame _loadData:MIMEType:textEncodingName:baseURL:unreachableURL:]):

2007-04-25  Oliver Hunt  <oliver@apple.com>

        Rubber stamped by Adele.

        Roll out WebKit changes from from r21052 to fix regression noted in
        <rdar://problem/5159556> REGRESSION: In Mail, pressing option-command- ' doesn't decrease block quote in selection

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _interceptEditingKeyEvent:shouldSaveCommand:]):
        (-[WebHTMLView doCommandBySelector:]):

2007-04-25  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Adam.

        Mac callbacks for new spelling methods in WebEditorClient.
        Not used yet.

        * WebCoreSupport/WebEditorClient.h:
        (WebEditorClient::ignoreWordInSpellDocument):
        (WebEditorClient::learnWord):
        (WebEditorClient::checkSpellingOfString):